<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subjectLyt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_add_30_margin"
        android:layout_marginStart="@dimen/add_activity_sideMargin"
        android:layout_marginEnd="@dimen/add_activity_sideMargin"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/objet_de_la_r_union" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/dateTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_add_30_margin"
        android:text="@string/choisir_la_date_et_l_heure"
        android:textSize="@dimen/item_firstLine_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectLyt" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/participantLyt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_add_30_margin"
        android:layout_marginStart="@dimen/add_activity_sideMargin"
        android:layout_marginEnd="70dp"
        app:layout_constraintTop_toBottomOf="@id/dateTimeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/participant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/participants_de_la_r_union"
        android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/add_add_fab"
        android:backgroundTint="@color/bleu_royal"
        android:src="@drawable/add_24"
        android:layout_margin="5dp"
        app:fabSize="mini"
        app:tint="@color/white"
        app:layout_constraintStart_toEndOf="@id/participantLyt"
        app:layout_constraintBottom_toBottomOf="@id/participantLyt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/participant_textview"
        android:layout_marginTop="@dimen/activity_add_30_margin"
        android:layout_marginStart="@dimen/add_activity_sideMargin"
        android:layout_marginEnd="@dimen/add_activity_sideMargin"
        android:hint="Veuillez entrer au moins deux adresses emails valides"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/participantLyt"/>









</androidx.constraintlayout.widget.ConstraintLayout>